# russianaicup2019

./: .gitignore  README.md  c  copy-model  cv  r  sim
scripts/: create-config.py  dump-constants.sh  pack-solution.sh  parse-result.py  properties.json  run-game.sh
src/: CMakeLists.txt  Const.cpp  Const.h  Debug.cpp  Debug.hpp  MyStrategy.cpp  MyStrategy.hpp  Simulation.cpp  Simulation.h  Stream.hpp  TcpStream.cpp  TcpStream.hpp  Track.h  checkSimulation.cpp  checkSimulation.h  dumpProperties.h  main.cpp  util.h
src/model/: Bullet.cpp  Bullet.hpp  BulletParams.cpp  BulletParams.hpp  ColoredVertex.cpp  ColoredVertex.hpp  CustomData.cpp  CustomData.hpp  ExplosionParams.cpp  ExplosionParams.hpp  Game.cpp  Game.hpp  Item.cpp  Item.hpp  JumpState.cpp  JumpState.hpp  Level.cpp  Level.hpp  LootBox.cpp  LootBox.hpp  Mine.cpp  Mine.hpp  MineState.cpp  MineState.hpp  Player.cpp  Player.hpp  PlayerMessageGame.cpp  PlayerMessageGame.hpp  PlayerView.cpp  PlayerView.hpp  Properties.cpp  Properties.hpp  ServerMessageGame.cpp  ServerMessageGame.hpp  Tile.cpp  Tile.hpp  Unit.cpp  Unit.hpp  UnitAction.cpp  UnitAction.hpp  (+13 more)
